--- a/src/components/Music/_components/Button/index.module.css
+++ b/src/components/Music/_components/Button/index.module.css
@@ -4,3 +4,14 @@
     border: none;
     cursor: pointer;
 }
+
+.icon{
+    width: 30px;
+}
+
+@media screen and (max-width: 425px) {
+
+    .icon{
+        width: 20px;
+    }
+}
