--- a/src/components/Music/index.module.css
+++ b/src/components/Music/index.module.css
@@ -1,34 +1,40 @@
-.main{
+.main {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 5px 5px;
-    background-color: #2C2C2C;
+    background-color: #1D1D1D;
     border-radius: 5px;
-    transition: 200ms;
+    transition: 150ms;
     cursor: pointer;
+    box-shadow: 0px 0px 10px #101010;
 }
 
-.main:hover{
-    background-color: #424242;
+.main:hover {
+    background-color: #3e3e3e;
 }
 
-.container_info{
+.img {
+    width: 57px;
+    border-radius: 5px;
+}
+
+.container_info {
     width: 40%;
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-.container_info_txt{
+.container_info_txt {
     flex-grow: 1;
     width: 80%;
     display: flex;
     flex-direction: column;
 }
 
-.music_name{
+.music_name {
     width: 100%;
     font-size: 1.1rem;
     overflow: hidden;
@@ -36,7 +42,7 @@
     text-overflow: ellipsis;
 }
 
-.artist_name{
+.artist_name {
     width: 100%;
     font-size: 0.9rem;
     color: #888888;
@@ -45,7 +51,47 @@
     text-overflow: ellipsis;
 }
 
-.container_btn{
+.container_btn {
     display: flex;
     gap: 5px;
+}
+
+
+@media screen and (max-width: 425px) {
+
+    .img {
+        width: 37px;
+        border-radius: 5px;
+    }
+
+    .music_name {
+        width: 100%;
+        font-size: 0.9rem;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+    
+    .artist_name {
+        width: 100%;
+        font-size: 0.7rem;
+        color: #888888;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+
+    .container_info {
+        width: 70%;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .container_info_txt {
+        flex-grow: 1;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+    }
 }
