--- a/src/components/Search/index.module.css
+++ b/src/components/Search/index.module.css
@@ -3,10 +3,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 5px;
+    padding: 10px;
     background-color: #434343;
     border-radius: 3px;
     cursor: pointer;
+    box-shadow: 0px 0px 10px #101010;
 }
 
 .input{
@@ -14,5 +15,30 @@
     border: none;
     background-color: #434343;
     color: white;
+    font-size: 1rem;
     font-family: "Outfit", sans-serif;
+}
+
+@media screen and (max-width: 425px){
+
+    .main{
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        background-color: #434343;
+        border-radius: 3px;
+        cursor: pointer;
+        box-shadow: 0px 0px 10px #101010;
+    }
+
+    .input{
+        flex-grow: 1;
+        border: none;
+        background-color: #434343;
+        color: white;
+        font-size: 0.85rem;
+        font-family: "Outfit", sans-serif;
+    }
 }
