--- a/src/components/footer/_components/InfoMusicFooter/index.module.css
+++ b/src/components/footer/_components/InfoMusicFooter/index.module.css
@@ -5,20 +5,20 @@
     gap: 10px;
 }
 
-.img{
+.img {
     width: 77px;
     border-radius: 5%;
 }
 
-.container_info_txt{
-    width: 80%;
+.container_info_txt {
+    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-grow: 1;
 }
 
-.music_name{
+.music_name {
     width: 100%;
     font-size: 1.2rem;
     color: white;
@@ -27,11 +27,82 @@
     text-overflow: ellipsis;
 }
 
-.artist_name{
+.artist_name {
     width: 100%;
     font-size: 0.9rem;
     color: #b7b6b6;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.container_btn_mobile {
+    display: none;
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .mian {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .container_info_txt {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-grow: 1;
+    }
+
+    .container_btn_mobile {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .mian {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .container_info_txt {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        flex-grow: 1;
+    }
+
+    .container_btn_mobile {
+        display: block;
+    }
+
+    .img {
+        width: 50px;
+        border-radius: 5%;
+    }
+
+    .music_name {
+        width: 100%;
+        font-size: 1rem;
+        color: white;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+    
+    .artist_name {
+        width: 100%;
+        font-size: 0.7rem;
+        color: #b7b6b6;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
 }
