--- a/src/components/footer/_components/multiMidia/index.module.css
+++ b/src/components/footer/_components/multiMidia/index.module.css
@@ -25,3 +25,40 @@
     font-size: 0.7rem;
     width: 5%;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .main {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container_time {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .main {
+        width: 40%;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .main {
+        width: 40%;
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
+}
