--- a/src/components/footer/_components/sound/index.module.css
+++ b/src/components/footer/_components/sound/index.module.css
@@ -5,3 +5,25 @@
     justify-content: end;
     gap: 10px;
 }
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .main{
+        width: 30%;
+        display: none;
+        align-items: center;
+        justify-content: end;
+        gap: 10px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .main{
+        width: 30%;
+        display: none;
+        align-items: center;
+        justify-content: end;
+        gap: 10px;
+    }
+}
