--- a/src/components/footer/index.module.css
+++ b/src/components/footer/index.module.css
@@ -3,4 +3,16 @@
     height: 15%;
     display: flex;
     align-items: center;
+    gap: 10px;
+}
+
+@media screen and (max-width: 425px){
+
+    .main {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 }
