--- a/src/components/infoMusic/index.module.css
+++ b/src/components/infoMusic/index.module.css
@@ -1,13 +1,13 @@
 .main {
     width: 25%;
     height: 100%;
-    background-color: #1D1D1D;
+    background-color: #121212;
     border-radius: 10px;
     padding: 10px;
     color: white;
 }
 
-.container_img{
+.container_img {
     width: 100%;
     height: 80%;
     flex-grow: 1;
@@ -50,4 +50,74 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     color: rgb(194, 194, 194);
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1300px) {
+
+    .music_name_txt {
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 2rem;
+        font-weight: 600;
+    }
+
+    .artist_name_txt {
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        color: rgb(194, 194, 194);
+        font-size: 0.9rem;
+    }
+
+    .album_name_txt {
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        color: rgb(194, 194, 194);
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .main {
+        width: 25%;
+        height: 100%;
+        display: none;
+        background-color: #121212;
+        border-radius: 10px;
+        padding: 10px;
+        color: white;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .main {
+        width: 25%;
+        height: 100%;
+        display: none;
+        background-color: #121212;
+        border-radius: 10px;
+        padding: 10px;
+        color: white;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .main {
+        width: 25%;
+        height: 100%;
+        display: none;
+        background-color: #121212;
+        border-radius: 10px;
+        padding: 10px;
+        color: white;
+    }
 }
