--- a/src/pages/home/_components/topArtists/_components/Artists/index.module.css
+++ b/src/pages/home/_components/topArtists/_components/Artists/index.module.css
@@ -1,4 +1,4 @@
-.main{
+.main {
     width: 16%;
     display: flex;
     flex-direction: column;
@@ -6,23 +6,124 @@
     gap: 5px;
 }
 
-.img{
-    width: 150px;
+.img {
+    width: 90%;
     border-radius: 50%;
     border: 1px transparent solid;
     cursor: pointer;
     transition: 200ms;
+    box-shadow: 0px 0px 10px #101010;
 }
 
-.img:hover{
+.img:hover {
     transform: scale(1.03);
     border: 1px #00df60 solid;
 }
 
-.artist_name{
+.artist_name {
     width: 80%;
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1300px) {
+
+    .main {
+        width: 20%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .artist_name {
+        width: 80%;
+        text-align: center;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 0.9rem;
+    }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .main {
+        width: 20%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .artist_name {
+        width: 80%;
+        text-align: center;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 768px) {
+
+    .main {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .artist_name {
+        width: 80%;
+        text-align: center;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 500px) {
+
+    .main {
+        width: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .artist_name {
+        width: 80%;
+        text-align: center;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .main {
+        width: 33%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .artist_name {
+        width: 80%;
+        text-align: center;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-size: 0.7rem;
+    }
 }
