--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -22,7 +22,7 @@
     gap: 10px;
     width: 75%;
     height: 100%;
-    background-color: #1D1D1D;
+    background-color: #121212;
     border-radius: 10px;
     padding: 10px 10px;
     overflow: auto;
@@ -42,4 +42,59 @@
 ::-webkit-scrollbar-thumb {
     background-color: #1ab75e;
     border-radius: 10px;
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+    .dashboard {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        height: 100%;
+        background-color: #121212;
+        border-radius: 10px;
+        padding: 10px 10px;
+        overflow: auto;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+
+    .dashboard {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        height: 100%;
+        background-color: #121212;
+        border-radius: 10px;
+        padding: 10px 10px;
+        overflow: auto;
+    }
+}
+
+
+@media screen and (max-width: 425px) {
+
+    .dashboard {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        height: 100%;
+        background-color: #121212;
+        border-radius: 10px;
+        padding: 5px 5px;
+        overflow: auto;
+    }
+
+    .container_principal {
+        width: 100%;
+        height: 90%;
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+    }
 }
