--- a/src/pages/home/_components/topArtists/index.module.css
+++ b/src/pages/home/_components/topArtists/index.module.css
@@ -1,15 +1,48 @@
-.main{
+.main {
     width: 100%;
     color: white;
 }
 
-.top_artists_txt{
+.top_artists_txt {
     font-size: 2rem;
 }
 
-.container_top{
+.container_top {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.link {
+    width: 16%;
+    text-decoration: none;
+    color: white;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .link {
+        width: 20%;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 768px) {
+
+    .link {
+        width: 25%;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 500px) {
+
+    .link {
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .link {
+        width: 33%;
+    }
 }
