--- a/src/pages/home/_components/topPlaylists/index.module.css
+++ b/src/pages/home/_components/topPlaylists/index.module.css
@@ -13,3 +13,36 @@
     align-items: center;
     justify-content: space-between;
 }
+
+.link {
+    width: 16%;
+    text-decoration: none;
+    color: white;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .link {
+        width: 20%;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 768px) {
+
+    .link {
+        width: 25%;
+    }
+}
+
+@media screen and (min-width: 425px) and (max-width: 500px) {
+
+    .link {
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    .link {
+        width: 33%;
+    }
+}
